Fixed login hamburger and customization button being covered

--- a/public/App.css
+++ b/public/App.css
@@ -723,6 +723,7 @@ svg:hover {
   gap: 30px;
   margin: 1rem;
   margin-top: 64px;
+  margin-bottom: 100px;
 }
 textarea {
   margin: 10px;
